--- a/package.json
+++ b/package.json
@@ -1,22 +1,14 @@
 {
-  "name": "test",
+  "name": "agents",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
-    "start": "nodemon start app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "fastify": "^3.23.1",
-    "sequelize": "^6.9.0",
-    "superagent": "^6.1.0"
-  },
-  "devDependencies": {
-    "@types/superagent": "^4.1.13"
+    "express": "^4.17.1"
   }
 }
